[ImportantSites] Limiting the # of Bookmark signals

We don't want to include every bookmarked site as an important site as
there may be TONS. Here we try to limit them to 10 at most:
* If there are 5 or less, just use those as signals,
* Otherwise filter for bookmarks with site engagement > 0, sort &
  limit to 5.

R=tedchoc@chromium.org
BUG=649876

Review-Url: https://codereview.chromium.org/2367153002
Cr-Commit-Position: refs/heads/master@{#421013}

Former-commit-id: e11f01dc5c09c5e1eb4c748297a5a2c57e719b65